--- a/join.html
+++ b/join.html
@@ -59,11 +59,11 @@
 		<div class="inner">
 			<h1>JOIN US</h1>
 			<ul class="gnb">
-				<li><a href="#">약관동의</a></li>
-				<li><a href="#"><i class="fas fa-chevron-right"></i></a></li>
-				<li><a href="#">정보입력</a></li>
-				<li><a href="#"><i class="fas fa-chevron-right"></i></a></li>
-				<li><a href="#">가입완료</a></li>
+				<li><a href="#" onclick="return false">약관동의</a></li>
+				<li><a href="#" onclick="return false"><i class="fas fa-chevron-right"></i></a></li>
+				<li><a href="#" onclick="return false">정보입력</a></li>
+				<li><a href="#" onclick="return false"><i class="fas fa-chevron-right"></i></a></li>
+				<li><a href="#" onclick="return false">가입완료</a></li>
 			</ul>
 			<article class="box_content">
 				<div class="txt">
