--- a/location.html
+++ b/location.html
@@ -65,22 +65,22 @@
 		<div class="inner">
 			<h1>Location</h1>
 			<h2>DODAL로 오시는길을 안내해드립니다.</h2>
-			
-				<ul class="map_header">
-					<li><span href="#"><img src="img/busi_i01.png" alt="위치이미지">Address</span>
-						<h3>오시는길 안내</h3>
-						<p>ㅇㅇ역 5번출구 → 8888번 → ㅇㅇㅇㅇ정류장에서 하차</p>
-					</li>
-					<li><span href="#"><img src="img/busi_i02.png" alt="위치이미지">Telephone</span>
-						<h3>서울본점 전화번호</h3>
-						<p>02-8888-8888</p>
-					</li>
-					<li><span href="#"><img src="img/busi_i03.png" alt="위치이미지">Fax</span>
-						<h3>서울본점 팩스번호</h3>
-						<p>02-8888-8888</p>
-					</li>
-				</ul>
-			
+
+			<ul class="map_header">
+				<li><span href="#"><img src="img/busi_i01.png" alt="위치이미지">Address</span>
+					<h3>오시는길 안내</h3>
+					<p>ㅇㅇ역 5번출구 → 8888번 → ㅇㅇㅇㅇ정류장에서 하차</p>
+				</li>
+				<li><span href="#"><img src="img/busi_i02.png" alt="위치이미지">Telephone</span>
+					<h3>서울본점 전화번호</h3>
+					<p>02-8888-8888</p>
+				</li>
+				<li><span href="#"><img src="img/busi_i03.png" alt="위치이미지">Fax</span>
+					<h3>서울본점 팩스번호</h3>
+					<p>02-8888-8888</p>
+				</li>
+			</ul>
+
 			<div id="map"></div>
 
 			<!-- <ul class="traffic">
@@ -89,10 +89,27 @@
 			</ul> -->
 
 			<ul class="branch">
-				<li data-index="0" class="on"><a href="#">본점</a>
-				<p>서울특별시 서울구 서울동 서울로333번길 3333</p></li>
-				<li data-index="1"><a href="#">부산지점</a></li>
-				<li data-index="2"><a href="#">제주지점</a></li>
+				<li data-index="0" class="on"><a href="#" onclick="return false">본점</a>
+					<p>서울특별시 서울구 서울동 서울로333번길 3333</p>
+					<a href="#" onclick="return false">
+						<i class="fas fa-hand-holding-heart"></i></a>
+					<a href="#" onclick="return false">
+						<i class="fab fab fa-instagram"></i></a>
+				</li>
+				<li data-index="1"><a href="#" onclick="return false">부산지점</a>
+					<p>부산특별시 부산구 부산동 부산로333번길 3333</p>
+					<a href="#" onclick="return false">
+						<i class="fas fa-hand-holding-heart"></i></a>
+					<a href="#" onclick="return false">
+						<i class="fab fab fa-instagram"></i></a>
+				</li>
+				<li data-index="2"><a href="#" onclick="return false">제주지점</a>
+					<p>제주특별시 제주구 제주동 제주로333번길 3333</p>
+					<a href="#" onclick="return false">
+						<i class="fas fa-hand-holding-heart"></i></a>
+					<a href="#" onclick="return false">
+						<i class="fab fab fa-instagram"></i></a>
+				</li>
 
 			</ul>
 
