--- a/location.html
+++ b/location.html
@@ -89,26 +89,32 @@
 			</ul> -->
 
 			<ul class="branch">
-				<li data-index="0" class="on"><a href="#" onclick="return false">본점</a>
+				<li data-index="0" class="on"><a href="#" class="address" onclick="return false">본점</a>
 					<p>서울특별시 서울구 서울동 서울로333번길 3333</p>
 					<a href="#" onclick="return false">
-						<i class="fas fa-hand-holding-heart"></i></a>
+						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
 						<i class="fab fab fa-instagram"></i></a>
+					<a href="#" onclick="return false">
+						<i class="fab fa-facebook-f"></i></a>
 				</li>
-				<li data-index="1"><a href="#" onclick="return false">부산지점</a>
+				<li data-index="1"><a href="#" class="address" onclick="return false">부산지점</a>
 					<p>부산특별시 부산구 부산동 부산로333번길 3333</p>
 					<a href="#" onclick="return false">
-						<i class="fas fa-hand-holding-heart"></i></a>
+						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
 						<i class="fab fab fa-instagram"></i></a>
+					<a href="#" onclick="return false">
+						<i class="fab fa-facebook-f"></i></a>
 				</li>
-				<li data-index="2"><a href="#" onclick="return false">제주지점</a>
+				<li data-index="2"><a href="#" class="address" onclick="return false">제주지점</a>
 					<p>제주특별시 제주구 제주동 제주로333번길 3333</p>
 					<a href="#" onclick="return false">
-						<i class="fas fa-hand-holding-heart"></i></a>
+						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
 						<i class="fab fab fa-instagram"></i></a>
+					<a href="#" onclick="return false">
+						<i class="fab fa-facebook-f"></i></a>
 				</li>
 
 			</ul>
