커뮤니티 상단 작업중

--- a/community.html
+++ b/community.html
@@ -56,9 +56,34 @@
 
 
 	<section class="content community">
-		<div class="sub_visual"></div>
+		<div class="sub_visual">
+			<h1>DODAL 고객센터</h1>
+			<div class="coummity_search">
+				<label for="sear"><i class="fas fa-search"></i> 도움말 검색</label>
+				<input type="text" name="sear" id="sear" placeholder="검색어를 입력하세요">
+			</div>
+		</div>
 		<div class="inner">
-			<h1>Q&A</h1>
+			<h1>자주 찾는 도움말</h1>
+			<div class="help">
+				<article>
+					<p class="num">01</p>
+					<p>계정을 (도용)해킹당했어요.</p>
+				</article>
+				<article>
+					<p class="num">02</p>
+					<p>사용한 상품을 환불하고싶어요.</p>
+				</article>
+				<article>
+					<p class="num">03</p>
+					<p>할인쿠폰이 중복적용이 되나요?</p>
+				</article>
+				<article>
+					<p class="num">04</p>
+					<p>상품(미개봉) 받은지 일주일이 지났는데 교환이 가능한가요?</p>
+				</article>
+			</div>
+			<h2>Q&A</h2>
 			<div class="header1">
 				<span>Tel +82-8-8888</span>
 				<span>Fax +82-8-8888</span>
