--- a/join.html
+++ b/join.html
@@ -6,7 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>join</title>
+	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<script src="js/jquery.mCustomScrollbar.js"></script>
+	<script defer src="js/join.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -174,7 +178,7 @@
 								<textarea name="comment" id="comment" cols="30" rows="10"
 									placeholder="코멘트를 입력해주세요"></textarea>
 							</td>
-						</tr> --> -->
+						</tr> -->
 
 					</table>
 					<h3>추가정보</h3>
@@ -197,8 +201,8 @@
 
 
 						<tr>
-							<th colspan="2" scope="row">
-								<textarea name="" id="" cols="30" rows="10">제1장 총 칙
+							<th colspan="2" scope="row"><span>전체동의</span>
+								<textarea class="box1" name="box"  cols="30" rows="10">제1장 총 칙
 
 									제1조(목적)
 									이 약관은 (이하 “회사”라 함)가 운영하는 “ㅇㅇ” 및 “ㅇㅇ” 인터넷 오픈마켓 사이트 (ㅇㅇ.co.kr, 이하 “ㅇㅇ”이라 함)를 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자 간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.
