--- a/location.html
+++ b/location.html
@@ -63,7 +63,7 @@
 	<section class="content location">
 		<div class="sub_visual"></div>
 		<div class="inner">
-			<h1>Location</h1>
+			<h1>LOCATION</h1>
 			<h2>DODAL로 오시는길을 안내해드립니다.</h2>
 
 			<ul class="map_header">
