--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<script defer src="js/isotope.pkgd.min.js"></script>
     <script defer src="js/myflickr.js"></script>
 </head>
 <body>
@@ -61,7 +62,7 @@
             <h1>Gallery</h1>
            
             <div id="gallery">
-
+				<img class="loading" src="img/loading01.gif">
             </div>
 
         </div>
