--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,7 @@
 					<li><a href="youtube.html">YOUTUBE</a></li>
 					<li><a href="community.html">COMMUNITY</a></li>
 					<li><a href="gallery.html">GALLERY</a></li>
-					<li><a href="location.html">LOCATION</a></li>
+	 				<li><a href="location.html">LOCATION</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -61,16 +61,12 @@
         <div class="inner">
             <h1>Gallery</h1>
            
-            <div id="gallery">
+            <div id="gallery_page">
 				<img class="loading" src="img/loading01.gif">
+
             </div>
-
         </div>
-
-
     </section>
-
-
 
 
     <footer id="footer_sub">
