갤러리 작업중

--- a/youtube.html
+++ b/youtube.html
@@ -63,7 +63,11 @@
             <!-- 서브페이지 컨텐츠 들어가는 부분 -->
 
             <div id="vidGallery"></div>
-
+			<div class="text">
+				<h2>Constantly growing Big Data Company</h2>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt rem quos minima fuga, quibusdam eligendi similique doloremque ipsa eos voluptatem.</p>
+				
+			</div>
         </div>
 
 
