--- a/location.html
+++ b/location.html
@@ -69,7 +69,7 @@
 			<ul class="map_header">
 				<li><span href="#"><img src="img/busi_i01.png" alt="위치이미지">Address</span>
 					<h3>오시는길 안내</h3>
-					<p>ㅇㅇ역 5번출구 → 8888번 → ㅇㅇㅇㅇ정류장에서 하차</p>
+					<p>서울역 5번출구 → 8888번 → 서울골목정류장에서 하차</p>
 				</li>
 				<li><span href="#"><img src="img/busi_i02.png" alt="위치이미지">Telephone</span>
 					<h3>서울본점 전화번호</h3>
@@ -91,30 +91,30 @@
 			<ul class="branch">
 				<li data-index="0" class="on"><a href="#" class="address" onclick="return false">본점</a>
 					<p>서울특별시 서울구 서울동 서울로333번길 3333</p>
-					<a href="#" onclick="return false">
+					<!-- <a href="#" onclick="return false">
 						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
 						<i class="fab fab fa-instagram"></i></a>
 					<a href="#" onclick="return false">
-						<i class="fab fa-facebook-f"></i></a>
+						<i class="fab fa-facebook-f"></i></a> -->
 				</li>
 				<li data-index="1"><a href="#" class="address" onclick="return false">부산지점</a>
 					<p>부산특별시 부산구 부산동 부산로333번길 3333</p>
-					<a href="#" onclick="return false">
+					<!-- <a href="#" onclick="return false">
 						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
 						<i class="fab fab fa-instagram"></i></a>
 					<a href="#" onclick="return false">
-						<i class="fab fa-facebook-f"></i></a>
+						<i class="fab fa-facebook-f"></i></a> -->
 				</li>
 				<li data-index="2"><a href="#" class="address" onclick="return false">제주지점</a>
 					<p>제주특별시 제주구 제주동 제주로333번길 3333</p>
-					<a href="#" onclick="return false">
+					<!-- <a href="#" onclick="return false">
 						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
 						<i class="fab fab fa-instagram"></i></a>
 					<a href="#" onclick="return false">
-						<i class="fab fa-facebook-f"></i></a>
+						<i class="fab fa-facebook-f"></i></a> -->
 				</li>
 
 			</ul>
