조직도 사진작업

--- a/location.html
+++ b/location.html
@@ -90,7 +90,7 @@
 
 			<ul class="branch">
 				<li data-index="0" class="on"><a href="#" class="address" onclick="return false">본점</a>
-					<p>서울특별시 서울구 서울동 서울로333번길 3333</p>
+					<p>서울특별시 서울구 서울동<br> 서울로333번길 3333</p>
 					<!-- <a href="#" onclick="return false">
 						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
@@ -99,7 +99,7 @@
 						<i class="fab fa-facebook-f"></i></a> -->
 				</li>
 				<li data-index="1"><a href="#" class="address" onclick="return false">부산지점</a>
-					<p>부산특별시 부산구 부산동 부산로333번길 3333</p>
+					<p>부산특별시 부산구 부산동<br> 부산로333번길 3333</p>
 					<!-- <a href="#" onclick="return false">
 						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
@@ -108,7 +108,7 @@
 						<i class="fab fa-facebook-f"></i></a> -->
 				</li>
 				<li data-index="2"><a href="#" class="address" onclick="return false">제주지점</a>
-					<p>제주특별시 제주구 제주동 제주로333번길 3333</p>
+					<p>제주특별시 제주구 제주동<br> 제주로333번길 3333</p>
 					<!-- <a href="#" onclick="return false">
 						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
