조직도 작업중

--- a/department.html
+++ b/department.html
@@ -80,7 +80,11 @@
 					<h1>온라인 마케팅 부서</h1>
 					<h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quos libero doloribus nisi. Maxime, nostrum saepe. what is this simply</h2>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -88,7 +92,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -96,7 +104,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -104,7 +116,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -112,7 +128,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -120,7 +140,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -128,7 +152,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -136,7 +164,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -144,7 +176,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -152,7 +188,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -160,7 +200,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -168,7 +212,11 @@
 						<a href="#"><i class="fab fa-instagram"></i></a>
 					</article>
 					<article>
-						<div class="pic"></div>
+						<div class="pic">
+							<div class="txt">
+								<p> click</p>
+							</div>
+						</div>
 						<h3>Alena Schilller</h3>
 						<p>Search Engines</p>
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
