사소한부분 수정중

--- a/youtube.html
+++ b/youtube.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>youtube</title>
-    <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>youtube</title>
+	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script defer src="js/youtube.js"></script>
 </head>
+
 <body>
-    <header id="header_sub">
+	<header id="header_sub">
 		<div class="inner">
 			<h1><a href="index.html">DODAL</a></h1>
 
@@ -55,28 +57,29 @@
 	</header>
 
 
-    <section class="content youtube">
-        <div class="sub_visual"></div>
-        <div class="inner">
+	<section class="content youtube">
+		<div class="sub_visual"></div>
+		<div class="inner">
 			<h1>Youtube</h1>
-           
-            <!-- 서브페이지 컨텐츠 들어가는 부분 -->
 
-            <div id="vidGallery"></div>
-			<div class="text">
+			<!-- 서브페이지 컨텐츠 들어가는 부분 -->
+
+			<div class="vidGallery"></div>
+			<!-- <div class="text">
 				<h2>Constantly growing Big Data Company</h2>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt rem quos minima fuga, quibusdam eligendi similique doloremque ipsa eos voluptatem.</p>
-				
-			</div>
-        </div>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt rem quos minima fuga, quibusdam
+					eligendi similique doloremque ipsa eos voluptatem.</p>
+
+			</div> -->
+		</div>
 
 
-    </section>
+	</section>
 
 
 
 
-    <footer id="footer_sub">
+	<footer id="footer_sub">
 		<div class="inner">
 
 			<div class="wrap">
