--- a/location.html
+++ b/location.html
@@ -91,6 +91,9 @@
 			<ul class="branch">
 				<li data-index="0" class="on"><a href="#" class="address" onclick="return false">본점</a>
 					<p>서울특별시 서울구 서울동<br> 서울로333번길 3333</p>
+					<!-- <span>
+						Tel : +82-8888-8888
+					</span> -->
 					<!-- <a href="#" onclick="return false">
 						<i class="far fa-heart"></i></a>
 					<a href="#" onclick="return false">
