--- a/youtube.html
+++ b/youtube.html
@@ -62,7 +62,9 @@
 		<div class="inner">
 			<h1>Youtube</h1>
 
-			<!-- 서브페이지 컨텐츠 들어가는 부분 -->
+			<div class="vidGallery2"></div>
+			<h2>Our Projects</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, quae!</p>
 
 			<div class="vidGallery"></div>
 			<!-- <div class="text">
@@ -72,8 +74,6 @@
 
 			</div> -->
 		</div>
-
-
 	</section>
 
 
