--- a/department.html
+++ b/department.html
@@ -8,6 +8,7 @@
 	<title>department</title>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script defer src="js/department.js"></script>
+	<script defer src="js/custom.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 
 <body>
@@ -57,28 +58,49 @@
 	<section class="content department">
 		<div class="sub_visual"></div>
 		<div class="inner">
-			<h1>Corporate</h1>
-			<ul class="team_name">
+			<!-- <h1>Corporate</h1> -->
+			<!-- <ul class="team_name">
 				<li><a href="#">온라인 마케팅부</a></li>
 				<li><a href="#">경영 지원부</a></li>
 				<li><a href="#">해외 영업부</a></li>
 				<li><a href="#">관리 사업부</a></li>
-			</ul>
+			</ul> -->
 			<div class="wrap">
 				<article class="company">
 					<div class="main_pic"></div>
 					<div class="txt">
-						<h2>온라인 마케팅</h2>
+						<h2>Online marketing</h2>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatum vero maiores
 							error asperiores! Nesciunt veniam iste recusandae. Ab, officia.</p>
 						<a href="#">Tel +82 7777 7777</a>
 						<a href="#">E-mail djd8320@naver.com</a>
 					</div>
 				</article>
+				
+				<article class="help">
+					<div class="help_txt">
+						<h2>
+							lorem is lorem
+							<a href="#" class="btn_class" onclick="return false"></a>
+						</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores ab quibusdam dolorem quo delectus optio corporis ipsa fuga assumenda hic.
+						</p>
+					</div>
+					<div class="help_txt">
+						<h2>
+							lorem is lorem
+							<a href="#" class="btn_class" onclick="return false"></a>
+						</h2>
+						<p>
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad maxime odit voluptatem magnam animi! Quam rerum fugit quibusdam fugiat earum?
+						</p>
+					</div>
+				</article>
 
 				<div class="team">
-					<h1>온라인 마케팅 부서</h1>
-					<h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quos libero doloribus nisi. Maxime, nostrum saepe. what is this simply</h2>
+					<h1>Our Team</h1>
+					<h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos libero doloribus nisi. Maxime, nostrum saepe. what is this simply</h2>
 					<article>
 						<div class="pic">
 							<div class="txt">
@@ -225,73 +247,6 @@
 					</article>
 				</div>
 			</div>
-
-			<!-- 
-			<div class="division">
-				<ul class="div_tree">
-					<li>
-						<span>General Manager</span> 
-
-						<ul>
-							<li>
-								<span>Production Manager</span>
-
-								<ul>
-									<li><span>GROUP (A)</span></li>
-									<li><span>GROUP (B)</span></li>
-									<li><span>GROUP (C)</span></li>
-									<li><span>GROUP (D)</span></li>
-								</ul>
-							</li>
-
-							<li>
-								<span>Finance Manager</span>
-
-								<ul>
-									<li><span>GROUP (A)</span></li>
-									<li><span>GROUP (B)</span></li>
-									<li><span>GROUP (C)</span></li>
-								</ul>
-							</li>
-
-							<li>
-								<span>Marketing Manager</span>
-
-								<ul>
-									<li><span>GROUP (A)</span></li>
-									<li><span>GROUP (B)</span></li>
-									<li><span>GROUP (C)</span></li>
-									<li><span>GROUP (D)</span></li>
-									<li><span>GROUP (E)</span></li>
-								</ul>
-							</li>
-
-							<li>
-								<span>R&D Manager</span>
-
-								<ul>
-									<li><span>GROUP (A)</span></li>
-									<li><span>GROUP (B)</span></li>
-								</ul>
-
-							</li>
-
-							<li>
-								<span>Sales Manager</span>
-
-								<ul>
-									<li><span>GROUP (A)</span></li>
-									<li><span>GROUP (B)</span></li>
-									<li><span>GROUP (C)</span></li>
-									<li><span>GROUP (D)</span></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-				</ul>
-
-			</div> -->
-
 
 
 		</div>
