--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script defer src="js/isotope.pkgd.min.js"></script>
+	<script defer src="js/custom.js"></script>
 	<script defer src="js/myflickr.js"></script>
 </head>
 
