--- a/youtube.html
+++ b/youtube.html
@@ -9,6 +9,7 @@
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
+	<script defer src="js/custom.js"></script>
 	<script defer src="js/youtube.js"></script>
 </head>
 
@@ -62,11 +63,26 @@
 		<div class="inner">
 			<h1>Youtube</h1>
 
-			<div class="vidGallery2"></div>
-			<h2>Our Projects</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, quae!</p>
+			<div class="vidGallery2">
+				<!-- <div class="icon_content">
+					<p class="icon"><i class=far fa-bookmark></i>246
+						<span>Bookmark</span>
+					</p>
+					<p class="icon"><i class=far fa-bookmark></i>246
+						<span>Bookmark</span>
+					</p>
+					<p class="icon"><i class=far fa-bookmark></i>246
+						<span>Bookmark</span>
+					</p>
+					<p class="icon"><i class=far fa-bookmark></i>246
+						<span>Bookmark</span>
+					</p> -->
+			</div>
 
-			<div class="vidGallery"></div>
+			<div class="vidGallery">
+				<h2>Our Projects</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, quae!</p>
+			</div>
 			<!-- <div class="text">
 				<h2>Constantly growing Big Data Company</h2>
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt rem quos minima fuga, quibusdam
