커뮤니티 수정

--- a/community.html
+++ b/community.html
@@ -57,7 +57,7 @@
 
 	<section class="content community">
 		<div class="sub_visual">
-			<h1>DODAL 고객센터</h1>
+			<h1>DODAL</h1>
 			<div class="coummity_search">
 				<label for="sear"><i class="fas fa-search"></i> 도움말 검색</label>
 				<input type="text" name="sear" id="sear" placeholder="검색어를 입력하세요">
