유튜브 계속 수정중

--- a/youtube.html
+++ b/youtube.html
@@ -59,36 +59,80 @@
 
 
 	<section class="content youtube">
-		<div class="sub_visual"></div>
+		<div class="sub_visual">
+			<label for="sear" name="sear"><i class="fas fa-search"></i></label>
+			<input type="text" class="sear" placeholder="Search videos,stars or authors">
+	
+			<ul class="header_icon">
+				<li><i class="fas fa-plus-circle"></i></li>
+				<li><i class="fas fa-envelope-open-text"></i></li>
+				<li><i class="fas fa-shopping-basket"></i></li>
+			</ul>
+		</div>
+		<!-- <div class="search_videos"> -->
+		<!-- </div> -->
 		<div class="inner">
-			<h1>Youtube</h1>
+			<!-- <h1>Youtube</h1> -->
 
 			<div class="vidGallery2">
-				<!-- <div class="icon_content">
-					<p class="icon"><i class=far fa-bookmark></i>246
-						<span>Bookmark</span>
-					</p>
-					<p class="icon"><i class=far fa-bookmark></i>246
-						<span>Bookmark</span>
-					</p>
-					<p class="icon"><i class=far fa-bookmark></i>246
-						<span>Bookmark</span>
-					</p>
-					<p class="icon"><i class=far fa-bookmark></i>246
-						<span>Bookmark</span>
-					</p> -->
+			
 			</div>
 
 			<div class="vidGallery">
 				<h2>Our Projects</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, quae!</p>
 			</div>
-			<!-- <div class="text">
-				<h2>Constantly growing Big Data Company</h2>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt rem quos minima fuga, quibusdam
-					eligendi similique doloremque ipsa eos voluptatem.</p>
-
-			</div> -->
+			<table summary="플레이리스트, 제목 숫자, 아이콘을 포함한 게시판">
+				<caption class="hidden">플레이리스트</caption>
+				<thead>
+					<tr>
+						<th scope="col">Play List</th>
+						<th><i class="fas fa-plus"></i></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<i class="far fa-play-circle"></i>
+							<a href="#" onclick="return false">What I'm Holding</a>
+						</td>
+						<td>17 Videos</td>
+						<td><i class="fas fa-ellipsis-v"></i></td>
+					</tr>
+					<tr>
+						<td>
+							<i class="far fa-play-circle"></i>
+							<a href="#" onclick="return false">Feng Shui Inspired</a>
+						</td>
+						<td>23 Videos</td>
+						<td><i class="fas fa-ellipsis-v"></i></td>
+					</tr>
+					<tr>
+						<td>
+							<i class="far fa-play-circle"></i>
+							<a href="#" onclick="return false">THE ROAD LESS TRAVELLED</a>
+						</td>
+						<td>9 Videos</td>
+						<td><i class="fas fa-ellipsis-v"></i></td>
+					</tr>
+					<tr>
+						<td>
+							<i class="far fa-play-circle"></i>
+							<a href="#" onclick="return false">Flatlay: Tech Edition</a>
+						</td>
+						<td>38 Videos</td>
+						<td><i class="fas fa-ellipsis-v"></i></td>
+					</tr>
+					<tr>
+						<td>
+							<i class="far fa-play-circle"></i>
+							<a href="#" onclick="return false">Lovesick Girls</a>
+						</td>
+						<td>18 Videos</td>
+						<td><i class="fas fa-ellipsis-v"></i></td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</section>
 
