--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 		<div class="pop_inner">
 			<h1>DODAL</h1>
 			<div class="pop_content">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dignissimos corporis, placeat doloribus
-				consequatur fugiat?
+				메인 페이지 다시 작업 
 			</div>
 			<div class="wrap">
 				<input type="checkbox" name="ck" id="ck">
