글씨작업중

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/18f037b822.js" crossorigin="anonymous"></script>
+	<script defer src="js/slider.js"></script>
 	<script defer src="js/custom.js"></script>
 	<script defer src="js/popup.js"></script>
 </head>
