--- a/community.html
+++ b/community.html
@@ -58,11 +58,11 @@
 
 	<section class="content community">
 		<div class="sub_visual">
-			<h1>DODAL</h1>
-			<div class="coummity_search">
+			<!-- <h1>DODAL</h1> -->
+			<!-- <div class="coummity_search">
 				<label for="sear"><i class="fas fa-search"></i> 도움말 검색</label>
 				<input type="text" name="sear" id="sear" placeholder="검색어를 입력하세요">
-			</div>
+			</div> -->
 		</div>
 		<div class="inner">
 			<h1>자주 찾는 도움말</h1>
