메인수정중

--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
 
 	<figure id="visual">
 		<div class="txt">
-			<h1>Lorem</h1>
+			<h1>Lorem, ipsum.</h1>
 			<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
-			<a href="#" onclick="return false">Read more <img src="img/arrow1.png" alt="arrow"></a>
+			<!-- <a href="#" onclick="return false">Read more <img src="img/arrow1.png" alt="arrow"></a> -->
 		</div>
 		
-		<article id="slider">
+		<!-- <article id="slider">
 			<ul class="list">
 				<li data-index="1"></li>
 				<li data-index="2"></li>
 				<li data-index="3"> </li>
 				<li data-index="4"></li>
 			</ul>
-		</article>
+		</article> -->
 
-		<div class="btns_inner">
-			<!-- <a href="#" class="prev"><i class="fas fa-chevron-left"></i></a> -->
+		<!-- <div class="btns_inner">
+			
 			<a href="#" class="next"><i class="fas fa-chevron-right"></i></a>
-		</div>
+		</div> -->
 
 	</figure>
 
@@ -88,7 +88,7 @@
 		<div class="pop_inner">
 			<h1>DODAL</h1>
 			<div class="pop_content">
-				메인 페이지 다시 작업 
+				메인 페이지 다시 작업중 
 			</div>
 			<div class="wrap">
 				<input type="checkbox" name="ck" id="ck">
