메인페이지 다시 작업중

--- a/index.html
+++ b/index.html
@@ -67,20 +67,12 @@
 			<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
 			<!-- <a href="#" onclick="return false">Read more <img src="img/arrow1.png" alt="arrow"></a> -->
 		</div>
-		
-		<!-- <article id="slider">
-			<ul class="list">
-				<li data-index="1"></li>
-				<li data-index="2"></li>
-				<li data-index="3"> </li>
-				<li data-index="4"></li>
-			</ul>
-		</article> -->
+		<div class="visual_box">
+			<h2>Contact us<br> and message</h2>
+			<input type="text">
 
-		<!-- <div class="btns_inner">
-			
-			<a href="#" class="next"><i class="fas fa-chevron-right"></i></a>
-		</div> -->
+		</div>
+
 
 	</figure>
 
