메인페이지 작업중

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/18f037b822.js" crossorigin="anonymous"></script>
-	<script defer src="js/slider.js"></script>
+	<!-- <script defer src="js/slider.js"></script> -->
 	<script defer src="js/custom.js"></script>
 	<script defer src="js/popup.js"></script>
 </head>
@@ -70,6 +70,11 @@
 		<div class="visual_box">
 			<h2>Contact us<br> and message</h2>
 			<input type="text">
+			<div class="right_box">
+				<p>Send</p>
+				<a href="#" class="right1" onclick="return false"><i class="fas fa-angle-right"></i>
+				</a>
+			</div>
 
 		</div>
 
@@ -80,7 +85,7 @@
 		<div class="pop_inner">
 			<h1>DODAL</h1>
 			<div class="pop_content">
-				메인 페이지 다시 작업중 
+				메인 페이지 다시 작업중
 			</div>
 			<div class="wrap">
 				<input type="checkbox" name="ck" id="ck">
@@ -93,65 +98,44 @@
 
 	<section id="news">
 		<div class="inner">
-			<h1>WHO WE ARE</h1>
-			<h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, similique!</h2>
+			<h1>Lorem ipsum dolor<br> sit amet consectetur.</h1>
+			<span class="header_txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br>  Voluptatem, similique!</span>
 			<div class="wrap">
 				<article>
-					<div class="icon">
-						<i class="far fa-calendar-alt"></i>
-					</div>
-					<div class="news_txt">
-						<h2>
-							<a href="#" onclick="return false">Lorem</a>
-						</h2>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
-							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!
-						</p>
-					</div>
+					<p>Lorem, ipsum.</p>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
+					<i class="fas fa-dharmachakra"></i>
+					<div class="arrow"></div>
 				</article>
 				<article>
-
-					<div class="icon">
-						<i class="far fa-user-circle"></i>
-					</div>
-					<div class="news_txt">
-						<h2>
-							<a href="#" onclick="return false">Lorem</a>
-						</h2>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
-							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!
-						</p>
-					</div>
+					<p>Lorem, ipsum.</p>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
+					<i class="far fa-lightbulb"></i>
+					<div class="arrow"></div>
 				</article>
 				<article>
-					<div class="icon">
-						<i class="fas fa-laptop-house"></i>
-					</div>
-					<div class="news_txt">
-						<h2>
-							<a href="#" onclick="return false">Lorem</a>
-						</h2>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
-							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!
-						</p>
-					</div>
+					<p>Lorem, ipsum.</p>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
+					<i class="far fa-clock"></i>
+					<div class="arrow"></div>
 				</article>
 				<article>
-					<div class="icon">
-						<i class="far fa-file-code"></i>
-					</div>
-					<div class="news_txt">
-						<h2>
-							<a href="#" onclick="return false">Lorem</a>
-						</h2>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores necessitatibus ex corporis
-							dolorum aperiam dolor numquam perspiciatis minus nesciunt officiis! Veritatis dignissimos
-							tempora ducimus assumenda earum impedit velit, mollitia amet!
-						</p>
-					</div>
+					<p>Lorem, ipsum.</p>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
+					<i class="fas fa-atom"></i>
+					<div class="arrow"></div>
+				</article>
+				<article>
+					<p>Lorem, ipsum.</p>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
+					<i class="fas fa-money-check"></i>
+					<div class="arrow"></div>
+				</article>
+				<article>
+					<p>Lorem, ipsum.</p>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
+					<i class="fas fa-signal"></i>
+					<div class="arrow"></div>
 				</article>
 			</div>
 		</div>
@@ -159,98 +143,15 @@
 
 	<section id="product">
 		<div class="inner">
-			<h1>Product</h1>
-			<a href="#" onclick="return false">Lore</a>
-			<a href="#" onclick="return false">Lorem, ipsum.</a>
-			<a href="#" onclick="return false">Lorem, ipsum.</a>
+			<h1>Products</h1>
 			<div class="wrap">
-
-				<article class="product_slider">
-					<ul class="product_list">
-						<li data-index="1">
-							<div class="txt">
-								<h2>Product one</h2>
-								<p>&#8361;100,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="2">
-							<div class="txt">
-								<h2>Product two</h2>
-								<p>&#8361;200,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="3">
-							<div class="txt">
-								<h2>Product three</h2>
-								<p>&#8361;300,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="4">
-							<div class="txt">
-								<h2>Product four</h2>
-								<p>&#8361;400,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="5">
-							<div class="txt">
-								<h2>Product five</h2>
-								<p>&#8361;500,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="6">
-							<div class="txt">
-								<h2>Product six</h2>
-								<p>&#8361;600,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="7">
-							<div class="txt">
-								<h2>Product seven</h2>
-								<p>&#8361;700,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="8">
-							<div class="txt">
-								<h2>Product eight</h2>
-								<p>&#8361;800,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-						<li data-index="9">
-							<div class="txt">
-								<h2>Product nine</h2>
-								<p>&#8361;900,000</p>
-								<a href="#" onclick="return false">Strawbery moon</a>
-								<!-- <a href="#"></a>
-								<a href="#"></a> -->
-							</div>
-						</li>
-					</ul>
+				<article class="box1">
+					<div class="pic"></div>
+					<div class="txt_box">
+						<p></p>
+					</div>
 				</article>
-			
+				
 			</div>
 		</div>
 	</section>
