메인페이지 작업중

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<!-- <a href="#" onclick="return false">Read more <img src="img/arrow1.png" alt="arrow"></a> -->
 		</div>
 		<div class="visual_box">
-			<h2>Contact us<br> and message</h2>
+			<h2>Leave us<br>a message</h2>
 			<input type="text">
 			<div class="right_box">
 				<p>Send</p>
@@ -99,7 +99,8 @@
 	<section id="news">
 		<div class="inner">
 			<h1>Lorem ipsum dolor<br> sit amet consectetur.</h1>
-			<span class="header_txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br>  Voluptatem, similique!</span>
+			<span class="header_txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br> Voluptatem,
+				similique!</span>
 			<div class="wrap">
 				<article>
 					<p>Lorem, ipsum.</p>
@@ -148,10 +149,44 @@
 				<article class="box1">
 					<div class="pic"></div>
 					<div class="txt_box">
-						<p></p>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi quod placeat dignissimos.
+						</p>
+						<span>Lorem ipsum dolor sit amet.</span>
 					</div>
 				</article>
-				
+				<article class="box2">
+					<div class="pic"></div>
+					<div class="txt_box">
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi quod placeat.</p>
+						<span>Lorem ipsum dolor sit amet.</span>
+					</div>
+				</article>
+				<article class="box3">
+					<div class="pic"></div>
+					<div class="txt_box">
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi quod placeat.</p>
+						<span>Lorem ipsum dolor sit amet.</span>
+					</div>
+				</article>
+			</div>
+		</div>
+	</section>
+
+	<section id="brand">
+		<div class="inner">
+			<h1>Lorem ipsum dolor sit<br> amet consectetur adip<br>isicing elit. Libero.</h1>
+			<div class="wrap">
+				<article>
+					<h2>Lorem, ipsum.</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur accusantium expedita assumenda dolorum.</p>
+					<span>www.naver.com</span>
+				</article>
+				<article>
+					<h2>Lorem, ipsum.</h2>
+				</article>
+				<article>
+					<h2>Lorem, ipsum.</h2>
+				</article>
 			</div>
 		</div>
 	</section>
@@ -161,70 +196,14 @@
 			<h1>DODAL</h1>
 			<h2>Smart Search</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita inventore quisquam nisi est dolor
-				incidunt minima cum enim ipsum magni?</p>
+			incidunt minima cum enim ipsum magni?
+			</p>
 
 			<div class="box">
 				<a href="#" onclick="return false">lorem <i class="fas fa-sort-down"></i></a>
 				<a href="#" onclick="return false">lorem <i class="fas fa-sort-down"></i></a>
 				<a href="#" onclick="return false">Search<i class="fas fa-search"></i></a>
 
-			</div>
-		</div>
-	</section>
-
-	<section id="brand">
-		<div class="inner">
-			<h1>BRAND IDENTITY</h1>
-			<div class="wrap">
-
-				<article>
-
-
-					<div class="txt">
-						<i class="fa-"></i>
-
-						<h2>PORTFOLIO</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eius repellendus nemo
-							atque
-							architecto minima!</p>
-
-						<a href="#" onclick="return false">VIEW DETAIL</a>
-					</div>
-
-				</article>
-				<article>
-
-					<!-- img/br7.jpg -->
-					<div class="pic"></div>
-					<!-- <video autoplay loop muted src="img/bc1.mp4"></video> -->
-					<div class="txt">
-
-						<h2>BRAND IDENTITY</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eius repellendus nemo
-							atque
-							architecto minima!</p>
-
-						<a href="#" onclick="return false"><i class="fas fa-arrow-right"></i></a>
-					</div>
-
-				</article>
-				<!-- <article>
-					<img src="img/br5.jpg" alt="브랜드2">
-				</article> -->
-				<article>
-					<!-- img/br4.jpg -->
-					<div class="pic"></div>
-					<div class="txt">
-
-
-						<h2>BRAND IDENTITY</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eius repellendus nemo
-							atque
-							architecto minima!</p>
-
-						<a href="#" onclick="return false"><i class="fas fa-arrow-right"></i></a>
-					</div>
-				</article>
 			</div>
 		</div>
 	</section>
