메인페이지 brand작업중

--- a/index.html
+++ b/index.html
@@ -177,15 +177,21 @@
 			<h1>Lorem ipsum dolor sit<br> amet consectetur adip<br>isicing elit. Libero.</h1>
 			<div class="wrap">
 				<article>
-					<h2>Lorem, ipsum.</h2>
+					<h2>Lorem, ipsum.
+						<div class="brand_arrow"></div>
+					</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur accusantium expedita assumenda dolorum.</p>
 					<span>www.naver.com</span>
 				</article>
 				<article>
-					<h2>Lorem, ipsum.</h2>
+					<h2>Lorem, ipsum.
+						<div class="brand_arrow"></div>
+					</h2>
 				</article>
 				<article>
-					<h2>Lorem, ipsum.</h2>
+					<h2>Lorem, ipsum.
+						<div class="brand_arrow"></div>
+					</h2>
 				</article>
 			</div>
 		</div>
