메인페이지 수정중

--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
 					<h2>Lorem, ipsum.
 						<div class="brand_arrow"></div>
 					</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur accusantium expedita assumenda dolorum.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur accusantium expedita
+						assumenda dolorum.</p>
 					<span>www.naver.com</span>
 				</article>
 				<article>
@@ -199,17 +200,12 @@
 
 	<section id="banner">
 		<div class="inner">
-			<h1>DODAL</h1>
-			<h2>Smart Search</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita inventore quisquam nisi est dolor
-			incidunt minima cum enim ipsum magni?
-			</p>
+			<h1>WANT MORE CONTENT<br>LIKE THIS?</h1>
 
-			<div class="box">
-				<a href="#" onclick="return false">lorem <i class="fas fa-sort-down"></i></a>
-				<a href="#" onclick="return false">lorem <i class="fas fa-sort-down"></i></a>
-				<a href="#" onclick="return false">Search<i class="fas fa-search"></i></a>
-
+			<div class="btn_box">
+				<h2>Lorem ipsum dolor sit.</h2>
+				<input type="text" placeholder="E-mail">
+				<button class="btn">button</button>
 			</div>
 		</div>
 	</section>
